# ELFScope

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: eheader_parser.h  elf_parser.h  pheader_parser.h  sheader_parser.h
src/: eheader_parser.cpp  elf_parser.cpp  main.cpp  pheader_parser.cpp  sheader_parser.cpp
